 /* $Id: changelog,v 1.608 2000-01-04 22:19:25 sandervl Exp $ */

 2000-01-04: Jens Wiessner <wiessnej@rfi.de>
	- TWAIN_32: Created twain dll for usage with CFM Twain for OS/2.

 2000-01-04: Sander van Leeuwen <sandervl@xs4all.nl>
	- USER32: InsertMenu bugfix (RealPlayer calls InsertMenu with flag 0 & pos -1)
                  Delete old region in SetWindowRegion

 2000-01-03: Przemyslaw Dobrowolski <dobrawka@asua.org.pl>
	- KERNEL32: Named pipe updates & bugfixes

 2000-01-03: Jens Wiessner <wiessnej@rfi.de>
	- LZ32/TAPI32: Updated def files to match NT 4 SP6
	- MSVCRT: Updated def files + MSVCRT40 version info
	- WINMM: Added Wine's MCI dlls (not compiled as this requires
                 a working MCI subsystem in winmm and a redesign of
                 wave & midi)

 2000-01-03: Sander van Leeuwen <sandervl@xs4all.nl>
	- LZ32: Cleaned up .def file (don't import directly) & removed
                debugtools.h
	- USER32: Fixed PostThreadMessage + bugs in GetMessage
	- KERNEL32: Set hmq & hab THDB values for newly created
                    threads (hmq not correct now)

 2000-01-02: Przemyslaw Dobrowolski <dobrawka@asua.org.pl>
	- KERNEL32: Started implementing named pipe apis

 2000-01-02: David Raison <djr@lemur.co.uk>
        - OLEAUT32: Typelib fixes - Custom Data & Default values.
                    Added private logging to tlib_n.log when reading a TLIB.
                    (Should clarify what is being read & why)
                    Now supports embedded named TLIBS in the format
                    <path>\<libname>\<id> (required for VB6, etc.)
                    Preparatory work to reduce dependance on 
                    current file position to enable delaying parsing 
                    data until it is requested by user.

 2000-01-02: Sander van Leeuwen <sandervl@xs4all.nl>
	- USER32: Implemented Set/GetWindowRgn (not activated)
	- KERNEL32: Fixed Odin zombie processes when there's a trap inside
                    vfprintf during logging.